--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
+    "firebase": "^12.0.0",
     "framer-motion": "^12.23.11",
     "lucide-react": "^0.535.0",
     "react": "^19.1.0",
