--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "axios": "^1.11.0",
     "bootstrap": "^5.3.7",
     "firebase": "^12.0.0",
-    "framer-motion": "^12.23.11",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.535.0",
     "react": "^19.1.0",
+    "react-awesome-reveal": "^4.3.1",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-parallax-tilt": "^1.7.304",
     "react-router-dom": "^7.7.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
     "web-vitals": "^2.1.4"
   },
