change the name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignmentproject",
+  "name": "@vi-vekrajawat/assignmentproject",
   "version": "0.1.0",
   "private": false,
    "publishConfig": {
